src/objects/BE_SingleRelatedList_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Columns__c</fullName>
        <label>Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldsQuery__c</fullName>
        <label>FieldsQuery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <inlineHelpText>Example: AccountId=:recordId AND Stage IN (@@Close@@),
replace simple  quotes for @@</inlineHelpText>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadActions__c</fullName>
        <label>Head Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberRows__c</fullName>
        <label>NumberRows</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sObjectApiName__c</fullName>
        <label>sObject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Single Related List Setting</label>
    <pluralLabel>Single Related List Settings</pluralLabel>
</CustomObject>